--- a/components/button/style/index.scss
+++ b/components/button/style/index.scss
@@ -1,4 +1,5 @@
 @import '../../style/core/index';
+@import 'node_modules/zarm/components/activity-indicator/style/component.scss';
 @import 'mixins';
 
 @include b(button) {
@@ -157,12 +158,18 @@
     float: left;
     position: relative;
 
-    & + .zw-button {
-      margin-left: 0 !important;
-    }
-
     @include m(disabled) {
       z-index: 1;
+    }
+
+    @include m (primary) {
+      &:not(:last-child) {
+        border-right-color: #4ed2a6;
+      }
+
+      &:not(:last-child) {
+        margin-right: 0 !important;
+      }
     }
 
     &:first-child {
@@ -177,14 +184,6 @@
 
     &:first-child:last-child {
       border-radius: var(--radius-md);
-
-      &.is-round {
-        border-radius: 20px;
-      }
-
-      &.is-circle {
-        border-radius: 50%;
-      }
     }
 
     &:not(:first-child):not(:last-child) {
@@ -201,20 +200,28 @@
       z-index: 1;
     }
   }
+}
 
-  @each $type in (default, primary, danger) {
-    .zw-button--#{$type} {
-      &:first-child {
-        border-right-color: rgba(var(--color-white), 0.5);
+@include b (button) {
+  @include m (primary) {
+    @include b (activity-indicator) {
+      circle {
+        stroke: #fff;
       }
+    }
+  }
 
-      &:last-child {
-        border-left-color: rgba(var(--color-white), 0.5);
-      }
+  @include m (default) {
+    @include m (loading) {
+      color: var(--theme-primary);
+      border-color: var(--theme-primary);
+    }
+  }
 
-      &:not(:first-child):not(:last-child) {
-        border-left-color: rgba(var(--color-white), 0.5);
-        border-right-color: rgba(var(--color-white), 0.5);
+  @include m (danger) {
+    @include b (activity-indicator) {
+      circle {
+        stroke: #fff;
       }
     }
   }
