--- a/components/style/animations/index.scss
+++ b/components/style/animations/index.scss
@@ -4,6 +4,7 @@
 @import "rotate.scss";
 @import "slide.scss";
 @import "zoom.scss";
+@import "zoom-fade.scss";
 @import "move.scss";
 @import "scale.scss";
 @import "bounce.scss";
