--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -134,8 +134,8 @@
   --button-default-active-color: var(--color-text);
   --button-default-ghost-border: var(--color-text-inverse);
   --button-default-ghost-color: var(--color-text-inverse);
-  --button-default-ghost-active-border: var(--theme-default);
-  --button-default-ghost-active-color: var(--theme-default);
+  --button-default-ghost-active-border: var(--theme-primary);
+  --button-default-ghost-active-color: var(--theme-primary);
   --button-primary-background: var(--theme-primary);
   --button-primary-border: var(--theme-primary);
   --button-primary-color: var(--color-text-inverse);
