--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -227,4 +227,6 @@
   --steps-status-wait: var(--color-text-disabled);
   --steps-status-process: var(--theme-primary);
   --steps-status-error: var(--theme-danger);
+  --steps-icon-size: 28px;
+  --steps-content-width: 140px;
 }
