feat: update loading

--- a/components/loading/style/index.scss
+++ b/components/loading/style/index.scss
@@ -1,6 +1,6 @@
 
-@import 'zarm/lib/activity-indicator/style/component.scss';
-@import '../../style/themes/variable';
+@import '../../style/core/index';
+@import 'node_modules/zarm/lib/activity-indicator/style/component.scss';
 @import "./mixins.scss";
 
 @include b(loading) {
