chore: remove some nonstandard css variables

--- a/components/message/style/index.scss
+++ b/components/message/style/index.scss
@@ -25,7 +25,7 @@
     pointer-events: all;
     font-size: var(--font-size-md);
     color: #8391a5;
-    background: var(--color-white);
+    background: var(--color-text-inverse);
     box-shadow: var(--box-shadow-dark);
     border-radius: var(--radius-md);
   }
