--- a/components/notification/style/component.scss
+++ b/components/notification/style/component.scss
@@ -11,7 +11,7 @@ $notification-margin-bottom: 16px;
   box-sizing: border-box;
   border-radius: var(--radius-md);
   right: 16px;
-  background-color: var(--color-white);
+  background-color: var(--color-text-inverse);
   box-shadow: var(--box-shadow-dark);
   transition: opacity 0.3s, transform .3s, right .3s, top 0.4s;
   line-height: 1.5;
