--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -7,9 +7,6 @@
   @include defineColorHSL(--theme-warning, 31, 83.1%, 55.9%);
   @include defineColorHSL(--theme-danger, 0, 100%, 65.7%);
 
-  --color-white: #fff;
-  --color-black: #000;
-
   // 文字色
   --color-text: #464646; // 基本
   --color-text-inverse: #fff; // 反色
@@ -126,7 +123,7 @@
   --button-default-background: var(--color-text-inverse);
   --button-default-border: #e6e6e6;
   --button-default-color: var(--color-text);
-  --button-default-hover-background: var(--color-white);
+  --button-default-hover-background: var(--color-text-inverse);
   --button-default-hover-border: var(--theme-primary);
   --button-default-hover-color: var(--theme-primary);
   --button-default-active-background: var(--theme-default);
@@ -141,7 +138,7 @@
   --button-primary-color: var(--color-text-inverse);
   --button-primary-hover-background: var(--theme-primary-light);
   --button-primary-hover-border: var(--theme-primary-light);
-  --button-primary-hover-color: var(--color-white);
+  --button-primary-hover-color: var(--color-text-inverse);
   --button-primary-active-background: var(--theme-primary-dark);
   --button-primary-active-border: var(--theme-primary-dark);
   --button-primary-active-color: rgba(255, 255, 255, 0.4);
@@ -154,7 +151,7 @@
   --button-danger-color: var(--color-text-inverse);
   --button-danger-hover-background: var(--theme-danger-light);
   --button-danger-hover-border: var(--theme-danger-light);
-  --button-danger-hover-color: var(--color-white);
+  --button-danger-hover-color: var(--color-text-inverse);
   --button-danger-active-background: var(--theme-danger-dark);
   --button-danger-active-border: var(--theme-danger-dark);
   --button-danger-active-color: rgba(255, 255, 255, 0.4);
@@ -180,12 +177,12 @@
 
   // Menu
   --menu-color: #343434;
-  --menu-default-bg-color: var(--color-white);
+  --menu-default-bg-color: var(--color-text-inverse);
   --menu-dark-bg-color: #001529;
   --menu-collapsed-width: 80px;
   --submenu-dark-bg-color: #000c17;
   --menuitem-dark-color: hsla(0, 0%, 100%, 0.65);
-  --menuitem-dark-active-color: var(--color-white);
+  --menuitem-dark-active-color: var(--color-text-inverse);
   --menuitem-default-color: #343434;
   --menuitem-active-color: var(--theme-primary);
   --menuitem-active-bg-color: rgba(0, 188, 112, 0.0625);
