--- a/components/drawer/style/index.scss
+++ b/components/drawer/style/index.scss
@@ -1,5 +1,5 @@
 @import '../../style/themes/default';
 @import './component';
-@import '~zarm/lib/popup/style/index';
-@import '~zarm/lib/mask/style/index';
-@import '~zarm/lib/style/themes/default';
+@import 'node_modules/zarm/components/popup/style/index.scss';
+@import 'node_modules/zarm/components/mask/style/index.scss';
+@import 'node_modules/zarm/components/style/index.scss';
