fix: fix some test error

--- a/components/modal/style/index.scss
+++ b/components/modal/style/index.scss
@@ -1,2 +1,5 @@
+@import 'node_modules/zarm/lib/popup/style/index.scss';
+@import 'node_modules/zarm/lib/mask/style/index.scss';
+@import 'node_modules/zarm/lib/style';
 @import '../../style/themes/default';
 @import './component';
