--- a/components/steps/style/index.scss
+++ b/components/steps/style/index.scss
@@ -42,12 +42,12 @@
         float: left;
       }
       @include e(content) {
-        min-height: 60px;
-        margin-left: calc(var(--steps-icon-size) + var(--steps-icon-size) / 2);
+        min-height: calc(var(--steps-icon-size) * 2);
+        margin-left: calc(var(--steps-icon-size) + 12px);
         padding-bottom: 10px;
       }
       @include e(title) {
-        margin-top: calc(var(--steps-icon-size) / 2 - 10px);
+        margin-top: calc(var(--steps-icon-size) / 2 - var(--steps-title-font-size) / 1.5);
       }
     }
   }
@@ -82,7 +82,6 @@
     position: absolute;
     top: calc(var(--steps-icon-size) / 2);
     width: calc(100% - (var(--steps-icon-size) + 24px));
-    padding: 0 calc(var(--steps-icon-size) / 2);
     height: 1px;
     background: var(--steps-border-color);
     left: calc(var(--steps-icon-size) + 12px);
