fix: remove css from css modules

--- a/site/styles/pages/modal.scss
+++ b/site/styles/pages/modal.scss
@@ -1,4 +1,7 @@
 @import "@site/styles/index";
+@import 'node_modules/zarm/lib/popup/style/index.scss';
+@import 'node_modules/zarm/lib/mask/style/index.scss';
+@import 'node_modules/zarm/lib/style';
 
 .modal-page {
   button {
