fix: fix some error and add some static method to Modal component

--- a/components/modal/style/component.scss
+++ b/components/modal/style/component.scss
@@ -8,11 +8,21 @@ $zarmPrefixCls: za-popup;
     min-width: 380px;
     overflow: hidden;
     box-shadow: 0 3px 10px 7px rgba(0, 0, 0, 0.15);
+    max-height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
   }
 
   @include m(radius) {
     @include e(content) {
       border-radius: 6px;
+    }
+  }
+
+  @include m(rect) {
+    @include e(content) {
+      border-radius: 0;
     }
   }
 
@@ -48,26 +58,10 @@ $zarmPrefixCls: za-popup;
     }
   }
 
-  @include m(scroll) {
-    height: 100%;
-
-    .#{$zarmPrefixCls}--center {
-      height: 100%;
-      max-height: 80%;
-    }
-
-    @include e(content) {
-      max-height: 100%;
-      display: flex;
-      justify-content: space-between;
-      flex-direction: column;
-    }
-
-    @include e(body) {
-      flex-grow: 1;
-      height: auto;
-      overflow: auto;
-    }
+  @include e(body) {
+    flex-grow: 1;
+    height: auto;
+    overflow: auto;
   }
 
   @include e(header) {
