--- a/site/styles/pages/modal.scss
+++ b/site/styles/pages/modal.scss
@@ -9,3 +9,12 @@
     margin-bottom: 10px;
   }
 }
+
+.scroll-in-modal {
+  height: '100%';
+
+  .za-popup {
+    height: 100%;
+    max-height: 80%;
+  }
+}
