--- a/components/tabs/style/mixin.scss
+++ b/components/tabs/style/mixin.scss
@@ -1,83 +1,93 @@
 @mixin tabs-size($font-size) {
   font-size: $font-size;
+  @include e(item) {
+    @include b(icon) {
+      font-size: $font-size;
+    }
+  }
+  @include e(arrow) {
+    @include b(icon) {
+      font-size: $font-size;
+    }
+  }
+}
 
-  @include b(tabs-header-item-icon) {
-    font-size: $font-size;
+@mixin tabs-item() {
+  position: relative;
+  cursor: pointer;
+  line-height: normal;
+  color: #616161;
+
+  &--disabled {
+    color: #bcbcbc;
+    cursor: not-allowed;
+  }
+
+  &--active {
+    background: #fff;
+    color: #00bc70;
+  }
+
+  @include b(icon) {
     display: inline-block;
     color: #bcbcbc;
     margin-left: 8px;
   }
 }
 
-@mixin tabs-header-style() {
+@mixin tabs-header() {
   position: relative;
-  @include b(tabs-scroll) {
+  &--sm {
+    @include tabs-size(
+      var(--tabs-font-size-sm),
+    );
+  }
+
+  &--md {
+    @include tabs-size(
+      var(--tabs-font-size-md),
+    );
+  }
+
+  &--lg {
+    @include tabs-size(
+      var(--tabs-font-size-lg),
+    );
+  }
+  @include e(scroll) {
     position: relative;
     margin: 0;
     list-style: none;
     padding: 0;
     margin-bottom: -1px;
+    @include e(nav) {
 
-    @include b(tabs-header-item) {
-      position: relative;
-      cursor: pointer;
-      line-height: normal;
-      color: #616161;
-
-      @include m(disabled) {
-        color: #bcbcbc;
-        cursor: not-allowed;
+      @include e(item) {
+        @include tabs-item()
       }
-
-      @include m(active) {
-        background: #fff;
-        color: #00bc70;
-      }
-
-      @include m(sm) {
-        @include tabs-size(
-          var(--tabs-font-size-sm),
-        );
-      }
-
-      @include m(md) {
-        @include tabs-size(
-          var(--tabs-font-size-md),
-        );
-      }
-
-      @include m(lg) {
-        @include tabs-size(
-          var(--tabs-font-size-lg),
-        );
-      }
-    }
-
-    &::-webkit-scrollbar {
-      display: none;
     }
   }
-
-  @include b(tabs-arrow) {
-    color: #909090;
-    font-size: 12px;
-    cursor: pointer;
+  @include e(arrow) {
+    @include b(icon) {
+      color: #909090;
+      cursor: pointer;
+    }
   }
 }
 
-@mixin tabs-body-style {
+@mixin tabs-body() {
   @include clearfix;
 
   position: relative;
   transition: height .3s;
 
-  @include b(tabs-body-item) {
+  @include e(body__item) {
     line-height: normal;
     opacity: 0;
     overflow: hidden;
     height: 0;
 
-    @include m(active) {
+    &--active {
       opacity: 1;
       height: auto;
     }
