--- a/site/components/Markdown/style.scss
+++ b/site/components/Markdown/style.scss
@@ -63,6 +63,8 @@
     min-width: 600px;
     font-size: 14px;
     margin-bottom: 45px;
+    border-collapse: collapse;
+    border-spacing: 0;
 
     strong {
       font-weight: normal;
