--- a/site/components/Markdown/style.scss
+++ b/site/components/Markdown/style.scss
@@ -95,11 +95,17 @@
 
 .markdown-demo-wrapper {
   margin-top: 40px;
-  columns: 50% 2;
+  // stylelint-disable-next-line
+  column-width: 50%;
+  // stylelint-disable-next-line
+  column-count: 2;
   column-fill: auto;
 
   @media (max-width: 1366px) {
-    columns: 100% 1;
+    // stylelint-disable-next-line
+    column-width: 100%;
+    // stylelint-disable-next-line
+    column-count: 1;
   }
 }
 
